Fix padding on mobile version in home.

--- a/assets/sass/about.scss
+++ b/assets/sass/about.scss
@@ -4,5 +4,9 @@
     padding-top: 100px;
     > div {
         flex-basis: 100%;
+        @media ( max-width: 768px ) {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
     }
 }
