--- a/assets/sass/donate.scss
+++ b/assets/sass/donate.scss
@@ -4,5 +4,9 @@
     flex-wrap: wrap;
     > div {
         flex-basis: 100%;
+        @media ( max-width: 768px ) {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
     }
 }
