--- a/assets/sass/portfolio.scss
+++ b/assets/sass/portfolio.scss
@@ -5,6 +5,11 @@ body.home {
         max-width: 90%;
         padding-bottom: 100px;
         padding-top: 0;
+        @media ( max-width: 768px ) {
+            max-width: 100%;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
         ul#types {
             list-style: none;
             margin-bottom: 0;
@@ -129,10 +134,6 @@ body.home {
     }
     .container.loop {
         padding-bottom: 0;
-        @media ( max-width: 768px ) {
-            padding-left: 0;
-            padding-right: 0;
-        }        
     }
     .buttons {
         margin-top: 30px;
